# nckernel_inter-flow

./: CMakeLists.txt  README.md  README.rst
cmake/: FindKODOC.cmake  FindKodoSlidingWindow.cmake  default_debug.cmake  git.cmake  sanitize_debug.cmake  trace.cmake
contrib/: rbufmgr.h
contrib/kerneldoc/: README.rst
dissector/: README.md  nc_kernel.lua  nck_rep.lua
docs/: CMakeLists.txt  conf.py  index.rst  interface.rst  protocols.rst  quickstart.rst  skb.rst  timers.rst
docs/protocols/: codarq.rst  gack.rst  gsaw.rst  noack.rst  nocode.rst  pace.rst  pacemg.rst  sw.rst  tetrys.rst
examples/: CMakeLists.txt  coop_simulator.c  ncrecv.c  ncrelay.c  ncsend.c  segmenter.c  simple_encode_recode_decode.c  simulator.c  simulator_common.c  simulator_common.h
examples/msc/: frames.json  msc.html
include/nckernel/: api.h  chain.h  codarq.h  config.h.in  gack.h  gsaw.h  interflowsw.h  nckernel.h  noack.h  nocode.h  pace.h  pacemg.h  segment.h  skb.h  sw.h  tetrys.h  timer.h  trace.h
src/: config.c  config.h  kodo.c  kodo.h  nckernel.c  private.h  segment.c  skb.c  timer_base.c  timer_libevent.c  timer_schedule.c  trace.c
src/chain/: config.c  decoder.c  encoder.c
src/codarq/: config.c  decoder.c  encoder.c
src/gack/: config.c  decoder.c  encoder.c  recoder.c
src/gsaw/: config.c  decoder.c  encoder.c
src/interflow_sw/: common.cpp  common.h  config.c  decoder.cpp  encoder.cpp  packet.h  recoder.cpp
src/noack/: config.c  decoder.c  encoder.c  recoder.c
src/nocode/: config.c  decoder.c  encoder.c  recoder.c
src/pace/: config.c  decoder.c  encoder.c  recoder.c
src/pacemg/: config.c  decoder.c  encdec.h  encoder.c  recoder.c
src/sliding_window/: common.cpp  common.h  config.c  decoder.cpp  encoder.cpp  packet.h  recoder.cpp
src/tetrys/: config.c  decoder.c  encoder.c
src/util/: binary8.c  binary8.h  binary8_avx2.c  binary8_simd.c  binary8_simd.h  binary8_ssse3.c  binary8_table.c  finite_field.cpp  finite_field.h  helper.c  helper.h  rate.h  rate_credit.c  rate_dual.c
tests/: CMakeLists.txt  test_decoder.c  test_encoder.c  test_simulator.py
tests/rep/: CMakeLists.txt  test_code.c  test_decoder.c  test_encoder.c  test_recoder.c  test_sarq.c
tests/tetrys/: CMakeLists.txt  test_decoder.c  test_encoder.c
tests/util/: CMakeLists.txt  test_binary8.c
